// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metas utils should replace meta for offer 1`] = `
"<!doctype html>
<html lang=\\"fr\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>pass Culture</title>
    <meta name=\\"title\\" content=\\"Sous les étoiles de Paris - VF\\" />
    <meta name=\\"description\\"
          content=\\"Dispositif porté par le ministère de la Culture, a pour but de faciliter l'accès des jeunes de 18 ans à la culture en leur offrant un crédit de 300€ à dépenser sur l'application pass Culture.\\"/>
    <meta name=\\"author\\" content=\\"pass Culture\\"/>
    <meta property=\\"og:type\\" content=\\"website\\"/>
    <meta property=\\"og:url\\" content=\\"http://localhost:8080/offre/116656\\" />
    <meta property=\\"og:title\\" content=\\"Sous les étoiles de Paris - VF\\" />
    <meta property=\\"og:description\\"
          content=\\"Dispositif porté par le ministère de la Culture, a pour but de faciliter l'accès des jeunes de 18 ans à la culture en leur offrant un crédit de 300€ à dépenser sur l'application pass Culture.\\"/>
    <meta property=\\"og:image\\" content=\\"https://storage.gra.cloud.ovh.net/v1/AUTH_688df1e25bd84a48a3804e7fa8938085/storage-pc-dev/thumbs/products/CHSYS\\" />
    <meta property=\\"og:image:alt\\" content=\\"Sous les étoiles de Paris - VF\\" />
    <meta property=\\"og:locale\\" content=\\"fr_FR\\"/>
    <meta property=\\"og:site_name\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:card\\" content=\\"summary\\" />
    <meta name=\\"twitter:url\\" content=\\"http://localhost:8080/offre/116656\\" />
    <meta name=\\"twitter:title\\" content=\\"Sous les étoiles de Paris - VF\\" />
    <meta name=\\"twitter:description\\"
          content=\\"Dispositif porté par le ministère de la Culture, a pour but de faciliter l'accès des jeunes de 18 ans à la culture en leur offrant un crédit de 300€ à dépenser sur l'application pass Culture.\\"/>
    <meta name=\\"twitter:image\\" content=\\"https://storage.gra.cloud.ovh.net/v1/AUTH_688df1e25bd84a48a3804e7fa8938085/storage-pc-dev/thumbs/products/CHSYS\\" />
    <meta name=\\"twitter:image:alt\\" content=\\"Sous les étoiles de Paris - VF\\" />
    <meta name=\\"twitter:site\\" content=\\"@pass_Culture\\"/>
    <meta name=\\"twitter:app:country\\" content=\\"FR\\"/>
    <meta name=\\"twitter:app:name:iphone\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:app:id:iphone\\" content=\\"1557887412\\"/>
    <meta name=\\"twitter:app:url:iphone\\" content=\\"passculture://http://localhost:8080/offre/116656\\" />
    <meta name=\\"twitter:app:name:ipad\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:app:id:ipad\\" content=\\"1557887412\\"/>
    <meta name=\\"twitter:app:url:ipad\\" content=\\"passculture://http://localhost:8080/offre/116656\\" />
    <meta name=\\"twitter:app:name:googleplay\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:app:id:googleplay\\" content=\\"app.passculture.testing\\"/>
    <meta name=\\"twitter:app:url:googleplay\\" content=\\"passculture://http://localhost:8080/offre/116656\\" />
    <meta property=\\"al:ios:app_name\\" content=\\"pass Culture\\"/>
    <meta property=\\"al:ios:app_store_id\\" content=\\"1557887412\\"/>
    <meta property=\\"al:ios:url\\" content=\\"passculture://https://app.testing.passculture.team\\"/>
    <meta property=\\"al:android:url\\" content=\\"passculture://https://app.testing.passculture.team\\">
    <meta property=\\"al:android:app_name\\" content=\\"pass Culture\\"/>
    <meta property=\\"al:android:package\\" content=\\"app.passculture.testing\\"/>
  </head>
  <body>
    <p>Hello world</p>
  </body>
</html>"
`;

exports[`metas utils should replace meta for venue 1`] = `
"<!doctype html>
<html lang=\\"fr\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>pass Culture</title>
    <meta name=\\"title\\" content=\\"Le Petit Rintintin 1\\" />
    <meta name=\\"description\\"
          content=\\"Dispositif porté par le ministère de la Culture, a pour but de faciliter l'accès des jeunes de 18 ans à la culture en leur offrant un crédit de 300€ à dépenser sur l'application pass Culture.\\"/>
    <meta name=\\"author\\" content=\\"pass Culture\\"/>
    <meta property=\\"og:type\\" content=\\"website\\"/>
    <meta property=\\"og:url\\" content=\\"http://localhost:8080/lieu/5543\\" />
    <meta property=\\"og:title\\" content=\\"Le Petit Rintintin 1\\" />
    <meta property=\\"og:description\\"
          content=\\"Dispositif porté par le ministère de la Culture, a pour but de faciliter l'accès des jeunes de 18 ans à la culture en leur offrant un crédit de 300€ à dépenser sur l'application pass Culture.\\"/>
    <meta property=\\"og:image\\" content=\\"https://app.testing.passculture.team/images/app-icon-512px.png\\"/>
    <meta property=\\"og:image:alt\\" content=\\" https://pass.culture.fr/ lorem ipsum consectetur adipisicing elit. Debitis officiis maiores quia unde, hic quisquam odit ea quo ipsam possimus, labore nesciunt numquam. Id itaque in sed sapiente blanditiis necessitatibus. consectetur adipisicing elit. Debitis officiis maiores quia unde, hic quisquam odit ea quo ipsam possimus, consectetur adipisicing elit. Debitis officiis maiores quia unde, hic quisquam odit ea quo ipsam possimus,\\" />
    <meta property=\\"og:locale\\" content=\\"fr_FR\\"/>
    <meta property=\\"og:site_name\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:card\\" content=\\"summary_large_image\\" />
    <meta name=\\"twitter:url\\" content=\\"http://localhost:8080/lieu/5543\\" />
    <meta name=\\"twitter:title\\" content=\\"Le Petit Rintintin 1\\" />
    <meta name=\\"twitter:description\\"
          content=\\"Dispositif porté par le ministère de la Culture, a pour but de faciliter l'accès des jeunes de 18 ans à la culture en leur offrant un crédit de 300€ à dépenser sur l'application pass Culture.\\"/>
    <meta name=\\"twitter:image\\" content=\\"https://app.testing.passculture.team/images/app-icon-512px.png\\"/>
    <meta name=\\"twitter:image:alt\\" content=\\"https://image.png\\" />
    <meta name=\\"twitter:site\\" content=\\"@pass_Culture\\"/>
    <meta name=\\"twitter:app:country\\" content=\\"FR\\"/>
    <meta name=\\"twitter:app:name:iphone\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:app:id:iphone\\" content=\\"1557887412\\"/>
    <meta name=\\"twitter:app:url:iphone\\" content=\\"passculture://http://localhost:8080/lieu/5543\\" />
    <meta name=\\"twitter:app:name:ipad\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:app:id:ipad\\" content=\\"1557887412\\"/>
    <meta name=\\"twitter:app:url:ipad\\" content=\\"passculture://http://localhost:8080/lieu/5543\\" />
    <meta name=\\"twitter:app:name:googleplay\\" content=\\"pass Culture\\"/>
    <meta name=\\"twitter:app:id:googleplay\\" content=\\"app.passculture.testing\\"/>
    <meta name=\\"twitter:app:url:googleplay\\" content=\\"passculture://http://localhost:8080/lieu/5543\\" />
    <meta property=\\"al:ios:app_name\\" content=\\"pass Culture\\"/>
    <meta property=\\"al:ios:app_store_id\\" content=\\"1557887412\\"/>
    <meta property=\\"al:ios:url\\" content=\\"passculture://https://app.testing.passculture.team\\"/>
    <meta property=\\"al:android:url\\" content=\\"passculture://https://app.testing.passculture.team\\">
    <meta property=\\"al:android:app_name\\" content=\\"pass Culture\\"/>
    <meta property=\\"al:android:package\\" content=\\"app.passculture.testing\\"/>
  </head>
  <body>
    <p>Hello world</p>
  </body>
</html>"
`;
